--- a/res/layout/activity_editrecording.xml
+++ b/res/layout/activity_editrecording.xml
@@ -1,6 +1,6 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/TableLayout1"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,72 +10,69 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ro.rcsrds.recordbox.EditRecordingActivity" >
 
-    <TableRow
-        android:id="@+id/tableRow1"
+
+    <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:text="@string/tv_name"
+        android:textAppearance="@style/DigiTextAppearance.Medium" />
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tv_name" />
+    <EditText
+        android:id="@+id/et_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:maxLength="100"
+        android:selectAllOnFocus="true"
+        android:text="@string/et_untitled" >
+        <requestFocus />
+    </EditText>
 
-        <EditText
-            android:id="@+id/et_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
-            android:maxLength="100"
-            android:text="@string/et_untitled"
-            android:selectAllOnFocus="true" >
 
-            <requestFocus />
-        </EditText>
-
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/tableRow2"
+    <TextView
+        android:id="@+id/tv_description"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/tv_description"
+        android:textAppearance="@style/DigiTextAppearance.Medium" />
 
-        <TextView
-            android:id="@+id/tv_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tv_description" />
+    <EditText
+        android:id="@+id/et_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:gravity="center_vertical|top"
+        android:inputType="textMultiLine"
+        android:lines="5"
+        android:maxLength="254" />    
 
-        <EditText
-            android:id="@+id/et_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="center_vertical|top"
-            android:inputType="textMultiLine"
-            android:maxLength="254"
-            android:lines="5" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:orientation="horizontal"
+        android:gravity = "center" >
+        
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="@string/btn_save"
+        android:drawableLeft="@drawable/icon_save"
+        android:drawableStart="@drawable/icon_save" />
 
-    </TableRow>
+    <Button
+        android:id="@+id/btn_save_play"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_save_play"
+        android:drawableLeft="@drawable/icon_save_play"
+        android:drawableStart="@drawable/icon_save_play" />
+    </LinearLayout>
 
-    <TableRow
-        android:id="@+id/tableRow3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <Button
-            android:id="@+id/btn_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_save" />
-
-        <Button
-            android:id="@+id/btn_save_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_save_play" />
-
-    </TableRow>
-
-</TableLayout>
+</LinearLayout>
