--- a/res/layout/activity_help.xml
+++ b/res/layout/activity_help.xml
@@ -6,19 +6,35 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ro.rcsrds.recordbox.AboutActivity" >
+    tools:context="ro.rcsrds.recordbox.HelpActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:orientation="vertical" >
+    	
+        <LinearLayout
+	        android:layout_width="match_parent"
+	    	android:layout_height="wrap_content"
+	    	android:layout_marginBottom="20dp"
+	    	android:orientation="horizontal"
+	    	android:gravity="center" >
+    	
+	        <ImageView
+	            android:id="@+id/img_logo"
+	            android:layout_width="180dp"
+	            android:layout_height="120dp"
+	            android:contentDescription="@string/app_name"
+	            android:src="@drawable/digirecordbox" />
+        
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_about_title1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/about_title1"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="@style/DigiTextAppearance.Medium" />
 
         <TextView
             android:id="@+id/tv_about_content1"
@@ -31,26 +47,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/about_title2"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="@style/DigiTextAppearance.Medium" />
 
         <TextView
             android:id="@+id/tv_about_content2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/about_content2" />
-
-        <TextView
-            android:id="@+id/tv_about_title3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/about_title3"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/tv_about_content3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/about_content3" />
 
     </LinearLayout>
     
