--- a/res/menu/recordinglist.xml
+++ b/res/menu/recordinglist.xml
@@ -7,6 +7,6 @@
     <item android:id="@+id/option_menu_import_files" android:title="@string/option_menu_import_files" />
     <item android:id="@+id/option_menu_check_files" android:title="@string/option_menu_check_files" />
     <item android:id="@+id/option_menu_settings" android:title="@string/option_menu_settings" />
-    <item android:id="@+id/option_menu_about" android:title="@string/option_menu_about" />    
+    <item android:id="@+id/option_menu_help" android:title="@string/option_menu_help" />    
 
 </menu>
