--- a/res/layout/rowlayout_recordinglist.xml
+++ b/res/layout/rowlayout_recordinglist.xml
@@ -54,6 +54,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/tv_duration"
         android:text="@string/ph_name" />
 
 </RelativeLayout>
