--- a/res/layout/rowlayout_recordinglist.xml
+++ b/res/layout/rowlayout_recordinglist.xml
@@ -55,6 +55,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/tv_duration"
+        android:layout_toStartOf="@+id/tv_duration"
         android:text="@string/ph_name" />
 
 </RelativeLayout>
