--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -7,7 +7,21 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="0dp">
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:gravity="end" >
+        
+        <Button
+	        android:id="@+id/btn_more"
+	        android:layout_width="16dp"
+	        android:layout_height="20dp"
+	        android:layout_marginTop="5dp"
+	        android:background="@drawable/icon_more" />
+        
+    </LinearLayout>
     
     <ImageView
 		android:id="@+id/img_logo"
