--- a/res/layout/activity_editrecording.xml
+++ b/res/layout/activity_editrecording.xml
@@ -7,10 +7,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
     tools:context="ro.rcsrds.recordbox.EditRecordingActivity" >
-
-
+    
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
