--- a/res/layout/activity_help.xml
+++ b/res/layout/activity_help.xml
@@ -5,13 +5,27 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
     tools:context="ro.rcsrds.recordbox.HelpActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:orientation="vertical" >
+    	
+        <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="25dp"
+	        android:gravity="end" >
+	        
+	        <Button
+		        android:id="@+id/btn_more"
+		        android:layout_width="16dp"
+		        android:layout_height="20dp"
+		        android:layout_marginTop="5dp"
+		        android:background="@drawable/icon_more" />
+	        
+	    </LinearLayout>	
     	
         <LinearLayout
 	        android:layout_width="match_parent"
