--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,8 +8,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
     tools:context="ro.rcsrds.recordbox.MainActivity" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:gravity="end" >
+        
+        <Button
+	        android:id="@+id/btn_more"
+	        android:layout_width="16dp"
+	        android:layout_height="20dp"
+	        android:layout_marginTop="5dp"
+	        android:layout_marginRight="16dp"
+	        android:layout_marginEnd="16dp"
+	        android:background="@drawable/icon_more" />
+        
+    </LinearLayout>
     
     <ImageView
             android:id="@+id/img_logo"
