--- a/res/layout/activity_mediaplayer.xml
+++ b/res/layout/activity_mediaplayer.xml
@@ -9,13 +9,31 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
     
-    <EditText
-        android:id="@+id/et_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/ph_name"
-        android:enabled="false"
-        android:inputType="text" />
+        android:layout_height="40dp"
+        android:gravity="end"
+        android:orientation="horizontal" >
+        
+        <EditText
+	        android:id="@+id/et_name"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:text="@string/ph_name"
+	        android:enabled="false"
+	        android:inputType="text" />
+        
+        <Button
+	        android:id="@+id/btn_more"
+	        android:layout_width="16dp"
+	        android:layout_height="20dp"
+	        android:layout_marginTop="5dp"
+	        android:background="@drawable/icon_more" />
+        
+    </LinearLayout>
+    
+    
     
     <LinearLayout
         android:layout_width="match_parent"
