--- a/res/layout/activity_recordinglist.xml
+++ b/res/layout/activity_recordinglist.xml
@@ -8,15 +8,31 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <EditText
-        android:id="@+id/searchField"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginBottom="10dp"
-        android:ems="10"
-        android:hint="@string/hint_search"
-        android:inputType="textVisiblePassword">
-    </EditText>
+        android:gravity="end"
+        android:orientation="horizontal" >
+        
+        <EditText
+	        android:id="@+id/searchField"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"	        
+	        android:layout_weight="1"
+	        android:ems="10"
+	        android:hint="@string/hint_search"
+	        android:inputType="textVisiblePassword">
+	    </EditText>
+        
+        <Button
+	        android:id="@+id/btn_more"
+	        android:layout_width="16dp"
+	        android:layout_height="20dp"
+	        android:layout_marginTop="5dp"
+	        android:background="@drawable/icon_more" />
+        
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView1"
