--- a/res/layout/activity_editrecording.xml
+++ b/res/layout/activity_editrecording.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,8 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="0dp"
-    tools:context="ro.rcsrds.recordbox.EditRecordingActivity" >
+    android:paddingTop="0dp" >
     
     <TextView
         android:id="@+id/tv_name"
@@ -24,10 +22,10 @@
         android:ems="10"
         android:inputType="text"
         android:maxLength="100"
-        android:selectAllOnFocus="true"
-        android:text="@string/et_untitled" >
-        <requestFocus />
-    </EditText>
+        android:text="@string/et_untitled"
+        android:selectAllOnFocus="true" />
+    <!--         android:selectAllOnFocus="true"
+    android:focusableInTouchMode="true" -->
 
 
     <TextView
