--- a/res/layout/activity_recordinglist.xml
+++ b/res/layout/activity_recordinglist.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +23,7 @@
 	        android:layout_weight="1"
 	        android:ems="10"
 	        android:hint="@string/hint_search"
-	        android:inputType="textVisiblePassword">
+	        android:inputType="text">
 	    </EditText>
         
         <Button
@@ -34,8 +35,9 @@
         
     </LinearLayout>
 
+    <!-- horizontal line -->
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/hr"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginBottom="10dp"
